test/Fail/ClashingImport.err
ClashingImport.agda:8.1-22: error: [ClashingDefinition]
Multiple definitions of A. Previous definition at
ClashingImport.agda:5.11-12
when scope checking the declaration
  open Imports.A public
